[project]
name = "nvtop-exporter"
version = "0.0.3"
description = "Add your description here"
readme = ".github/README.md"
authors = [
    { name = "spotdemo4", email = "me@trev.xyz" }
]
requires-python = ">=3.14"
dependencies = [
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
]

[project.scripts]
nvtop-exporter = "nvtop_exporter:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
